changed ids to classes

--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
     </head>
 
     <body>
-        <div id="hero">
-            <h1 id="page-title">Old Tucson</h1>
-            <h3 id="page-description">Enjoy rich history, green cacti, and old movies; an all you can learn buffet at Old Tucson Studios!</h3>
+        <div class="hero">
+            <h1 class="page-title">Old Tucson</h1>
+            <h3 class="page-description">Enjoy rich history, green cacti, and old movies; an all you can learn buffet at Old Tucson Studios!</h3>
         </div>
 
         <div class="main-info">
             <div class="activities">
                 <div>
-                    <h2 id="section-header-1">Four exciting activites to do whilst visiting Old Tucson</h2>
+                    <h2 class="section-header-1">Four exciting activites to do whilst visiting Old Tucson</h2>
                 </div>
                 <div class="activity-info">
-                    <div id="info-box" class="activity-info-parts">
+                    <div class="info-box" class="activity-info-parts">
                         <img class="profile-img" src="/images/old-tucson-studios.jpeg">
                         <h4>Old Tucson Studio Tours</h4>
                         <p>Tour the sets and scenery of movies and TV shows such as: Tombstone, Little House on the Prairie, and Three Amigos.</p>
                     </div>
-                    <div id="info-box" class="activity-info-parts">
+                    <div class="info-box" class="activity-info-parts">
                         <img class="profile-img" src="/images/desert-museum.jpeg">
                         <h4>Arizona-Sonora Desert Museum</h4>
                         <p>Take a long shaded walk through nature at the Desert Museam nearby Old Tucson, full of desert animals of all kinds.</p>
@@ -32,12 +32,12 @@
                 </div>
 
                 <div class="activity-info"">
-                    <div id="info-box" class="activity-info-parts">
+                    <div class="info-box" class="activity-info-parts">
                         <img class="profile-img" src="/images/yuletide.png">
                         <h4>Yultide Christmas at Old Tucson</h4>
                         <p>Come during the winter months for a Holiday themed blast to the past.</p>
                     </div>
-                    <div id="info-box" class="activity-info-parts">
+                    <div class="info-box" class="activity-info-parts">
                         <img class="profile-img" src="/images/gate-pass-trailhead.jpg">
                         <h4>Gate Pass Trailhead</h4>
                         <p>Hike along one of the most beautiful paths for sunrises and sunsets on the Gate Pass Trailhead.</p>
@@ -46,10 +46,10 @@
             </div>
 
             <div class="guide-info">
-                <img id="guide-picture" src="/images/ethan.jpg">
+                <img class="guide-picture" src="/images/ethan.jpg">
                 <div>
                     <h2>Your guide</h2>
-                    <p id="content-quote">"I lived in Tucson for 7 years, giving me an excellent ability to show you around the beautiy of Old Tucson Studios and the surrounding attractions."</p>
+                    <p class="content-quote">"I lived in Tucson for 7 years, giving me an excellent ability to show you around the beautiy of Old Tucson Studios and the surrounding attractions."</p>
                     <h4>Ethan Mamanakis</h4>
                 </div>
             </div>
